[package]
name = "syn_query"
version = "0.2.0"
authors = ["hjiayz <hjiayz@hotmail.com>"]
repository = "https://github.com/hjiayz/syn_query"
description = "implement Trait Syn::Visit"
license = "GPL-3.0"
keywords = ["syn","visit","jquery"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[dependencies]
syn={version="0.14.2",features = ["full","visit","extra-traits"] }
proc-macro2="0.4.4"